# bqt

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Blender python interpreter.md  Home.md  LICENSE  MANIFEST.in  Operator-issues.md  Qt5.py  README.md  __init__.py  alternatives to bqt.md  blender input bug.md  blender_stylesheet.qss  bqt pypi setup.md  bqt.py  build.py  contribute guidelines.md  dev-requirements.txt  hello_world.py  install-bqt-addon.md  operators.md  package.py  pyproject.toml  qwindoweventloop.py  requirements.txt  setup.cfg  setup.py  test_bqt.bat  why-bqt.md
.github/workflows/: python-publish.yml  release.yaml
.obsidian/: community-plugins.json  workspace.json
.obsidian/plugins/obsidian-paste-png-to-jpeg/: main.js  manifest.json  styles.css
blender_applications/: Win32BlenderApplication.py  __init__.py  blender_application.py  darwin_blender_application.py  win32_blender_application.py
bqt/: __init__.py  __pyside_compatibility.py  blender_manifest.toml  blender_stylesheet.qss  focus.py  hello_world.py  manager.py  pyside_compatibility.py  qt_core.py  quit_dialogue.py  utils.py  widget_manager.py  win32_native_filter.py
bqt/blender_applications/: __init__.py  blender_application.py  darwin_blender_application.py  win32_blender_application.py
bqt/data/: bqt_startup.py
bqt/ui/: __init__.py  quit_dialogue.py
bqt/ui/patches/: menu.py
bqt_demo/: README.md  anim_bar.py  demo.py  hello_world.py  pyside_widgets.py  timer.py
notes/: Environment variables.md  Installation.md  Releasing a new version.md  Sync the wiki and wiki-branch.md  blender input bug.md  bqt as a dependency.md  features.md  how to contribute to bqt documentation.md  install as addon.md  install bqt addon.md  install bqt module.md  install-bqt-addon.md  operator issues.md  quick start guide.md  setup bqt develop environment.md  starter tips for doc writers.md  tips for bqt doc writers.md  why-bqt.md  widget disappears.md
notes/.obsidian/: workspace.json
startup/: load_bqt.py
