[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bqt"
version = "1.4.2" # don't forget to update the version in blender_manifest.toml
description = "Files to help bootstrap PySide6 with an event loop within Blender."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
authors = [
    {name="tech-artists.org"}
]
keywords = ["Technical", "Art", "TechArt", "TechArtOrg", "Blender", "Qt", "PySide", "tool", "pipeline", "gamedev", "vfx", "3d"]
license = "MPL-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "PySide6",
    "blender-qt-stylesheet",
]

[project.urls]
Homepage = "https://github.com/techartorg/bqt"
Repository = "https://github.com/techartorg/bqt"
Issues = "https://github.com/techartorg/bqt/issues"
Documentation = "https://github.com/techartorg/bqt/wiki"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bqt = ["ui/*.svg"]

[tool.setuptools.packages.find]
include = ["bqt*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D105",   # Missing docstring in magic method
  "D107",   # Missing docstring in `__init__`
  "D203",   # Incorrect blank line before class
  "D213",   # Multi line summary second line
  "PD",     # pandas-vet linter
  "TD002",  # Missing author in TODO
  "TD003",  # Missing issue link on the line following this TODO
  "FBT003", # Boolean positional value in function call
  "PLC0415",  # 'import ' should be at the top-level of a file
]
