[metadata]
name = bqt
version = attr: bqt.VERSION
description = Files to help bootstrap PySide6 with an event loop within Blender.
long_description = file: README.md
long_description_content_type = text/markdown
charset=UTF-8
url = https://github.com/techartorg/bqt
author = tech-artists.org
license = Mozilla Public License 2.0
license_file = ./LICENSE
keywords = ["Technical", "Art", "TechArt", "TechArtOrg", "Blender", "Qt", "PySide"]
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires = PySide6
python_requires = >=3.7
setup_requires = setuptools_scm
cmdclass =
    install = build.CustomInstall

[options.package_data]
bqt =
    *.png
    *.qss
    dist/bqt_startup.py

[bdist_wheel]
universal = 1
